backend/vulnerability_analysis/testing/bof2/segments/klee-out-0/messages.txt
KLEE: Using STP solver backend
KLEE: SAT solver: MiniSat
KLEE: Deterministic allocator: Using quarantine queue size 8
KLEE: Deterministic allocator: globals (start-address=0x7f2d6f800000 size=10 GiB)
KLEE: Deterministic allocator: constants (start-address=0x7f2aef800000 size=10 GiB)
KLEE: Deterministic allocator: heap (start-address=0x7e2aef800000 size=1024 GiB)
KLEE: Deterministic allocator: stack (start-address=0x7e0aef800000 size=128 GiB)
KLEE: ERROR: testing/bof2/segments/segment_1_klee.c:10: failed external call: __ubsan_handle_divrem_overflow
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: libc/string/strlen.c:22: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
